# llm-repo-agent

./: .gitignore  README.md  dpo_finetune_quick.py  pyproject.toml  run_commands.sh  sft_finetune_quick.py  stateless-doodling-clarke.md
blog_post/: appendix.md  llm_repo_agent_blog_post_v0.md  llm_repo_agent_blog_post_v1.md
blog_post/brainstorm/: dump.md  notes.md
blog_post/notes/: notes_v1.md
builder_notes/: dpo_finetune_general_plan.md  dpo_finetune_imp_details.md  estimate_dpo_train_cost.md  next.md  next_refined.md  sft_it_plan_qa.md  sft_plan_refined.md  thinking_about_dpo_contrast.md  todo.md
refactor_notes/: dpo_finetune_pilot_plan.md  dpo_finetune_pilot_plan_qa.md
tests/: test_actions.py  test_adapter_contract.py  test_changes_fallback.py  test_controller.py  test_driver_note_ordering.py  test_estimate_cost.py  test_eval_metrics.py  test_eval_report.py  test_eval_tasks.py  test_final_includes_test_result.py  test_hallucinated_changes.py  test_inspect_trace.py  test_inspect_trace_dump_prompt.py  test_inspect_trace_pretty_only_prompt.py  test_inspect_trace_prompt_with_history.py  test_inspect_trace_prompt_with_history_preserve_newlines.py  test_integration_flows.py  test_json_tool_llm.py  test_llm_factory.py  test_llm_responses.py  test_llm_usage_trace.py  test_prefs_pairs.py  test_prefs_schema.py  test_prefs_score.py  test_prefs_write_mode.py  test_prompt_tool_protocol.py  test_reflection.py  test_run_lifecycle.py  test_sandbox.py  test_sft_extract.py  test_summary_history.py  test_test_policy.py  test_tool_protocol_cli.py  test_trailing_trace.py
(+69 files in other folders)
